[fix] fix overflow-x on modal menu

--- a/recoco/apps/home/static/home/css/dsfr/custom-dsfr.scss
+++ b/recoco/apps/home/static/home/css/dsfr/custom-dsfr.scss
@@ -578,3 +578,9 @@ form > p {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.menu-modal-correct-fr-menu {
+  right: 0px;
+  margin: 0;
+  padding: 0;
+}
