--- a/recoco/apps/projects/static/projects/css/project_navigation.scss
+++ b/recoco/apps/projects/static/projects/css/project_navigation.scss
@@ -147,11 +147,6 @@
   transform: translate3d(0, -4px, 0);
 }
 
-.show-me {
-  right: 1rem;
-  padding-right: 0;
-}
-
 .divider-specific {
   border-top: solid 1px #e5e5e5;
   padding: 0;
